Fixed middle image going out of container

--- a/css/index.css
+++ b/css/index.css
@@ -249,6 +249,7 @@ header .logo {
 .main-content .middle-img {
     display: block;
     margin: 30px auto;
+    width: 100%;
 }
 
 .main-content .bottom-content {
